@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.audio.eradio.gr" version="1.2.1" name="E-Radio" provider-name="Twilight0">
+<addon id="plugin.audio.eradio.gr" version="1.2.2" name="E-Radio" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0" />
 		<import addon="script.module.tulip" version="1.0.6" />
@@ -17,6 +17,9 @@
 		<source>https://github.com/Twilight0/plugin.audio.eradio.gr</source>
 		<website>http://www.e-radio.gr/</website>
 		<news>
+[B]1.2.2[/B]
+- Minor insignificant tweaks here &amp; there.
+
 [B]1.2.1[/B]
 - Minor tweaks in main indexer
 
