@@ -1,3 +1,6 @@
+[B]1.2.2[/B]
+- Minor insignificant tweaks here & there.
+
 [B]1.2.1[/B]
 - Minor tweaks in main indexer
 
